Simplifies several operations ('instanceof', constant strings..)